Fixed bug when opened on firefox
Passed the "event" element as a parameter when needed. This way there is no problem when playing
on firefox.

--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ body{
     position: absolute;
     top: 100px;
     right: 0;
-    bottom: 0;
     z-index: 1;
     transition: 0.2s linear;
 }
@@ -153,6 +152,7 @@ body{
     padding: 70px 10px;
     font-size: 1.1rem;
     line-height: 40px;
+    border-bottom: 1px solid black;
 }
 .rules-tab ul{
     list-style: none;
